# ptxbench-temp

./: .gitignore  INTERACTIVE_NOTES.md  README.md  answer.py  answer_conv1d_bgemm.py  answer_max_reduce.py  bench_conv2d_candidate.py  bench_conv2d_nchw_out.py  bench_conv2d_rawcudnn.py  candidate_submission.py  candidate_submission_multiline.py  candidate_submission_smallsrc.py  cmp4_only.cu  cmp4_only.ptx  compute_dw_tf32.cu  compute_dw_tf32.ptx  compute_only.cu  compute_only.ptx  compute_plain.cu  compute_pw_tf32.cu  compute_pw_tf32.ptx  copy_hit_only.cu  copy_hit_only.ptx  copy_miss_only.cu  copy_miss_only.ptx  final_answer_candidate.py  final_answer_multiline.py  final_candidate_conv2d_rawcudnn.py  final_candidate_matmul89.py  final_candidate_task.py  final_candidate_task11.py  final_candidate_task11_multiline.py  final_compact.py  final_generated_conv_pool_mish.py  final_model_candidate.py  final_modelnew_convtx3d70.py  final_ptx_submission.py  final_ptx_submission_multiline.py  final_ptx_submission_small.py  final_submission_conv_inorm_cache.py  (+377 more)
experiments/: README.md  level1_matched_agentic_gpt54.toml  level1_matched_oneshot_claude_opus47.toml  level1_matched_oneshot_claude_sonnet46.toml  level1_matched_oneshot_gpt54.toml  level1_matched_oneshot_gpt55_medium.toml  level1_pilot_agentic_gpt54.toml  level1_pilot_oneshot_claude_opus47.toml  level1_pilot_oneshot_claude_sonnet46.toml  level1_pilot_oneshot_gpt54.toml  level1_pilot_oneshot_gpt55_high.toml  level1_pilot_oneshot_gpt55_medium.toml  level2_matched_oneshot_gpt54.toml  level2_pilot_agentic_gpt54.toml  (+9 more)
(+73 files in other folders)
